# ui_platform

./: .gitignore  README.md  Windows_loading.md  build.py  cross_platform.py  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  test_plugin_integration.py  train.py  train_main.py  开发分析与方案.md
ai_models/: README.md  __init__.py  integration.py
ai_models/deployment/: deployment_manager.py  deployment_pipeline.py
ai_models/training/: __init__.py  datasets.py  exporters.py  models.py  trainer.py
apps/: __init__.py  api_server.py  example_app.py  main.py  training_api.py  ui_server.py
checkpoints/transformer/: silica_cnn_best.pth  (+1 more)
configs/: enhanced_config.yaml  extended_models_config.yaml  models_config.yaml  platform.yaml  training_config.yaml  voltage_config.json  voltage_config.yaml  voltage_levels_config.yaml
docs/: ARCHITECTURE.md  INTEGRATION_GUIDE.md  README_ai.md  REPAIR_GUIDE.md  SOLUTION_SUMMARY.md  TRAINING.md  VOLTAGE_INTEGRATION_GUIDE.md
files/: DEPLOYMENT_GUIDE.md  model_registry_manager.py  models_config.yaml  plugin_initializer.py
platform_core/: __init__.py  api_routes.py  auto_roi_detector.py  config.py  exceptions.py  extended_inference_engine.py  extended_model_registry_manager.py  fusion_engine.py  inference_engine.py  model_registry_manager.py  ptz_controller.py  voltage_adapter.py  voltage_adapter_extended.py  voltage_api.py  voltage_api_extended.py
plugins/: README.md  test_all_plugins.py
scripts/: cross_platform.py  deploy_models.sh  deploy_models_remote.sh  fix_type_errors.py  install.bat
tests/: test_voltage_adapter.py
training/: __init__.py  data_augmentation.py  evaluate_training.py  model_integration.py  prepare_training_data.py  quick_setup.py  setup_all_data.py  train_mac.sh  train_main.py
ui/: __init__.py
(+248 files in other folders)
