[project]
name = "powerstation-monitor"
version = "1.0.0"
description = "输变电激光星芒破夜绘明监测平台"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "Proprietary"}
authors = [
    {name = "Power Station Team", email = "team@example.com"}
]
keywords = ["power-station", "monitoring", "ai", "computer-vision"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "pillow>=10.1.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "loguru>=0.7.2",
    "apscheduler>=3.10.4",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]
build = [
    "pyinstaller>=6.2.0",
    "nuitka>=1.9.0",
]

[project.scripts]
powerstation = "apps.main:main"
powerstation-api = "apps.api_server:main"
powerstation-ui = "apps.ui_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "platform_core", "plugins", "ui"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
